// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ClientInformation /> App and lib version, and device ID should render the app and lib version 1`] = `
<div
  className="position-relative text-align-center c-8d8d8d fs-12 pb-20"
  onTouchStart={[Function]}
>
  <p
    className="_xj22ct webkit-user-select-none user-select-none"
  >
    App Version: 
    1.2.3
     (
    7.8.9
    )
    <br />
    Lib Version: 
    4.5.6
  </p>
</div>
`;

exports[`<ClientInformation /> App and lib version, and device ID should show the device ID 1`] = `
<div
  className="position-relative text-align-center c-8d8d8d fs-12 pb-20"
  onTouchStart={[Function]}
>
  <p
    className="_xj22ct webkit-user-select-none user-select-none"
  >
    App Version: 
    1.2.3
     (
    7.8.9
    )
    <br />
    Lib Version: 
    4.5.6
  </p>
  <p
    className="word-break-break-all p-0_16px"
  >
    Device ID: 
    my-awesome-device-id
  </p>
</div>
`;

exports[`<ClientInformation /> should not render if no data is available 1`] = `null`;

exports[`<ClientInformation /> should not render if the data is still being fetched 1`] = `null`;
